@startuml sdd-01b_module_contract_members
title SDD-01b — Module contract and contribution registry, DETAIL (UML **class diagram**)\nEvery field and signature of the Phase 0 classes.\nWho owns what, and the three seams, is SDD-01a — read that first.
skinparam classAttributeIconSize 0
hide empty members

package "sagittarius_engine (existing)" #WhiteSmoke {
  abstract class "IExtension<TContext>" as IExt {
    + name : str
    + descriptor : ExtensionDescriptor
    + {abstract} register(context)
    + {abstract} boot(context)
    + {abstract} shutdown(context)
  }
  class ExtensionDescriptor {
    + name : str
    + dependencies : list[str]
    + priority : int
    + enabled : bool
  }
  interface IContainer {
    + singleton(abstract, instance_or_factory)
    + bind(abstract, concrete)
    + resolve(abstract)
    + registrations() : Mapping[type, Registration]
  }
  class QtEventBridge {
    + on(event_type, handler)
    + off_all()
  }
  IExt ..> ExtensionDescriptor
}

package "core/contracts (app, lift-ready)" #LightYellow {
  abstract class BoundedContextModule {
    + {static} module_id : ClassVar[str]
    + {static} dependencies : ClassVar[list[str]]
    + {abstract} register(context)  <<no resolve(), no I/O, no Qt>>
    + {abstract} boot(context)
    + shutdown(context)
    + contribute(registry : IContributionRegistry)
    + subscribe(bridge : QtEventBridge)  <<TYPE_CHECKING-only import>>
  }
  enum Place {
    SCREEN
    HEADER
    CONTEXT_BAR
    WORKSPACE
    RAIL
    CONSOLE
    MODAL
    SETTINGS_SECTION
    STATUS_TILE
    DEV_PROBE
  }
  enum SizeHint {
    COMPACT
    REGULAR
    TALL
  }
  class ContributionDescriptor <<frozen dataclass>> {
    + contributor_id : str  <<a module_id, or "shell">>
    + surface_id : str
    + place : Place
    + order : int  <<sort key, collisions allowed>>
    + size_hint : SizeHint
    + factory : Callable[[IContainer], QWidget]  <<TYPE_CHECKING-only import; lazy body>>
    + title : str | None = None
  }
  class ScreenContribution <<frozen dataclass>> {
    + contributor_id : str
    + route : str
    + title : str
    + icon : str
    + section_key : str
    + section_sequence : int
    + item_sequence : int
    + location : NavLocation
    + is_default : bool
    + is_navigable : bool
    + factory : Callable[[IContainer], tuple[View, Presenter]]
  }
  interface IConfigWriter {
    + set(key : str, value : object)
    + save()
  }
  class ContributionError <<exception, contracts/errors>>
  interface IContributionRegistry {
    + add(descriptor : ContributionDescriptor)
    + add_screen(screen : ScreenContribution)
    + for_place(surface_id, place) : tuple[ContributionDescriptor, ...]
    + screens() : tuple[ScreenContribution, ...]
    + ui_map() : Mapping[(surface_id, Place), tuple[str, ...]]
  }
  IExt <|-- BoundedContextModule
  ContributionDescriptor --> Place
  ContributionDescriptor --> SizeHint
  IContributionRegistry o-- ContributionDescriptor
  IContributionRegistry o-- ScreenContribution
  interface IPlaceHost {
    + slot(place : Place) : QLayout  <<implemented by ui_kit.SurfaceHost (QMainWindow)>>
  }
  BoundedContextModule ..> IContributionRegistry : contribute()
  BoundedContextModule ..> QtEventBridge : subscribe()
  BoundedContextModule ..> IContainer : register(): singleton/bind only
}

package "shell (app policy)" #LightGray {
  class ModuleList {
    + MODULES : tuple[type[BoundedContextModule], ...]  <<topological order>>
  }
  class ContributionRegistry {
    - _by_place : dict
    + add(descriptor)  <<validates place, rejects duplicates>>
  }
  class Surface {
    + surface_id : str
    + accepts : frozenset[Place]
    + gated : bool  <<dev_board: dev.mode at boot>>
    + build(registry, container) : IPlaceHost
  }
  class LegacyScreenAdapter {
    + wrap(module : AbstractScreenModule) : ScreenContribution  <<strangler period only>>
  }
  class ConfigWriterAdapter {
    + over ConfigManager  <<implements IConfigWriter>>
  }
  IConfigWriter <|.. ConfigWriterAdapter
  class DoubleClaimCheck {
    + run(container.registrations(), modules) : None  <<raises before boot>>
  }
  IContributionRegistry <|.. ContributionRegistry
  Surface ..> IContributionRegistry : for_place()
  ModuleList ..> BoundedContextModule
  DoubleClaimCheck ..> IContainer
}

package "modules/market_data (Walking Skeleton)" #LightGreen {
  class MarketDataModule {
    + module_id = "market_data"
    + dependencies = []
  }
  BoundedContextModule <|-- MarketDataModule
}
@enduml
